--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                 <div id="row">
                     <form id="task-form">
                         <div class="input-field col s12">
-                            <input type="text" name="task" id="task">
-                            <label for="task">New Task</label>
+                            
+                            <input type="text" value="Enter the note here." name="task" id="task">
+                            
+                            <!-- <label for="task">New Task</label> -->
                         </div>
                         <input id="addtaskbtn" type="submit" value="Add" class="btn-floating btn-large green">
                     </form>
